# dsr

./: setup.cfg
src/dsr/: __init__.py
