[metadata]
name = dsr
description = Docker Swarm Rocks!
long_description = file: README.md
author = Woojin Cho
author_email = woojin.cho@gmail.com
keywords = 
license = MIT License

[options]
dependency_links = 
python_requires = >= 3.8
package_dir =
    =src
packages = find:
install_requires = 
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    # <cli command> = <module>.<submodule>:<function>
